fixed spacing on first text div

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     font-size: 22px;
     font-weight: 900;
     padding: 20px 0;
-    width: 280px;
+    width: 290px;
   }
   
   .texttwo {
@@ -41,7 +41,7 @@
     font-size: 20px;
     color: gray;
     padding: 0 0 20px 0;
-    width: 280px;
+    width: 290px;
   }
   
  
